--- a/src/src/app/home/home.page.html
+++ b/src/src/app/home/home.page.html
@@ -5,17 +5,22 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-list>
-    <ion-item (click)="presentAlertCheckbox()">Item 1</ion-item>
-    <ion-item (click)="presentAlertPrompt()">Item 2</ion-item>
-    <ion-item>Item 3</ion-item>
-    <ion-item>Item 4</ion-item>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label>Item 5</ion-label>
+  <ion-list class="animated bounceInUp">
+      <ion-item *ngIf="tasks.length < 1">
+        <ion-label>Não há tarefas</ion-label>
+      </ion-item>
+
+      <ion-item-sliding *ngFor="let task of tasks">
+      <ion-item (click)="openActions(task)">
+
+        <ion-label *ngIf="!task.done">{{task.name}}</ion-label>
+        <ion-label *ngIf="task.done"><del>{{task.name}}</del></ion-label>
+
+        <ion-icon slot="start" name="radio-button-off" *ngIf="!task.done"></ion-icon>
+        <ion-icon slot="start" name="checkmark-circle" color="success" *ngIf="task.done"></ion-icon>
       </ion-item>
       <ion-item-options side="start">
-        <ion-item-option (click)="unread(item)">Unread</ion-item-option>
+        <ion-item-option (click)="delete(task)">Excluir</ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
 
