--- a/src/src/app/home/home.page.html
+++ b/src/src/app/home/home.page.html
@@ -6,24 +6,31 @@
 
 <ion-content [fullscreen]="true">
   <ion-list class="animated bounceInUp">
-      <ion-item *ngIf="tasks.length < 1">
-        <ion-label>Não há tarefas</ion-label>
-      </ion-item>
+    <ion-item *ngIf="tasks.length < 1">
+      <ion-label>Não há tarefas</ion-label>
+    </ion-item>
 
-      <ion-item-sliding *ngFor="let task of tasks">
+    <ion-item-sliding *ngFor="let task of tasks">
       <ion-item (click)="openActions(task)">
+        <ion-label *ngIf="!task.active">{{task.nome}}</ion-label>
+        <ion-label *ngIf="task.active"><del>{{task.nome}}</del></ion-label>
 
-        <ion-label *ngIf="!task.done">{{task.name}}</ion-label>
-        <ion-label *ngIf="task.done"><del>{{task.name}}</del></ion-label>
-
-        <ion-icon slot="start" name="radio-button-off" *ngIf="!task.done"></ion-icon>
-        <ion-icon slot="start" name="checkmark-circle" color="success" *ngIf="task.done"></ion-icon>
+        <ion-icon
+          slot="start"
+          name="radio-button-off"
+          *ngIf="!task.active"
+        ></ion-icon>
+        <ion-icon
+          slot="start"
+          name="checkmark-circle"
+          color="success"
+          *ngIf="task.active"
+        ></ion-icon>
       </ion-item>
       <ion-item-options side="start">
         <ion-item-option (click)="delete(task)">Excluir</ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
-
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
